k8s/analytics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gridops-analytics
  namespace: gridops-prod
  labels:
    app: gridops-analytics
    tier: microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gridops-analytics
  template:
    metadata:
      labels:
        app: gridops-analytics
    spec:
      containers:
        - name: analytics
          image: ghcr.io/yakshpatidar88-cyber/gridops-analytics:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "800m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: gridops-analytics
  namespace: gridops-prod
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  selector:
    app: gridops-analytics
