k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gridops-backend
  namespace: gridops-prod
  labels:
    app: gridops-backend
    tier: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gridops-backend
  template:
    metadata:
      labels:
        app: gridops-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/yakshpatidar88-cyber/gridops-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: gridops-backend
  namespace: gridops-prod
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: gridops-backend
